style.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section{display:block;}body{line-height:1;}ol, ul{list-style:none;}blockquote, q{quotes:none;}blockquote:before, blockquote:after,q:before, q:after{content:'';content:none;}table{border-collapse:collapse;border-spacing:0;}img{width:100%;}

h1{
    font-family: proxima-nova, sans-serif;
    font-weight: 800;
    font-style: normal;
    font-size: 6em;
    color: #242424;
    padding-bottom: .1em;
}

h2{
    font-family: depot-new-web, sans-serif;
    font-weight: 300;
    font-size: 1.5em;
    line-height: 1.8em;
    color: #242424;
    
}

h3{
    font-family: depot-new-web, sans-serif;
    font-weight: 400;
    font-size: 1.4em;
    line-height: 1.5em;
    color: #242424;
}

p{
    font-family: depot-new-web, sans-serif;
    font-weight: 300;
    font-size: 1em;
    line-height: 1.5em;
    color: #242424;
}

button{
    cursor: pointer;
    background: none;
    padding: .5em 1em;
    font-family: proxima-nova, sans-serif;
    font-weight: 500;
    font-size: 1.1em;
    border: #242424 solid 2px;
    border-radius: 4px;
    transition: ease .3s;
}

button:hover{
    box-shadow: 0 .5em 1em rgba(0, 0, 0, 0.2);
    transform: translateY(-.2em)
}

@media only screen and (max-width: 70em) {
    h1{font-size: 4em}
    h2{font-size: 1.3em}
    h3{font-size: 1.2em}
}

@media only screen and (max-width: 50em) {
    h2{font-size: 1.2em}
    h1{font-size: 3.5em}
}


/*---------------------NAVIGATION-----------------------*/

.top_bar{display: none;}

.nav_back_arrow{display: none;}

main{
    padding-left: 12em;
    margin-left: 2px;
} 

nav{
    height: 100%;
    width: 12em;
    position: fixed;
    z-index: 101;
    top: 0;
    left: 0;
    background-color: white;
    border-right: solid #F1F1F1 2px;
    transition: ease .3s;
}

nav:hover{
    padding-left: 1em;
    box-shadow: 0 0 2em rgba(0, 0, 0, 0.1);
}

.logo{
    width: 4em;
    margin: 2em;
}

nav ul{
    position: absolute;
    top: 43%;
    list-style: none;
    padding-left: 1.6em;
    font-size: 1.2em;
}

nav a{
    text-decoration: none;
    line-height: 2.5em;
    font-family: proxima-nova, sans-serif;
    font-weight: 300;
    font-style: normal;
    color: #242424;
}

.social{
    position: absolute;
    bottom: 1.5em;
    padding-left: 1.5em;
}

.social img{
    width: 1.1em;
    padding: 0 .8em;
}

/*Optimizing for wide and short monitors*/
@media only screen and (min-width: 90em) {
    nav{padding-left: 2em}
    nav:hover{padding-left: 3em}
    .social{padding-left: .3em}
    main{padding-left: 14em;}
}

@media only screen and (max-height: 30em) {
    .logo{width: 2.5em}
    .social{bottom: .5em}
    nav ul{top: 35%;}
    nav a{line-height: 2em}
    }

/*Implementing sliding navigation drawer*/
@media only screen and (max-width: 50em) {
    nav{
        transform: translateX(-100%);
        border: none;
    }
    
    nav:hover{
        padding-left: 0;
        box-shadow: 0 0 2em rgba(0, 0, 0, 0.1);
    }
    
    main{
        padding-left: 0;
        margin-left: 0;
        padding-top: 5em;
    }
    
    nav ul{top: 30%}
    
    nav a{
        text-decoration: none;
        line-height: 3em;
    }
    
    .top_bar{
        outline: solid #F1F1F1 2px;
        z-index: 99;
        background-color: #FFF;
        height: 5em;
        display: flex;
        position: fixed;
        width: 100%;
    }
    
    .drawer{
        position: absolute;
        margin-top: 1.5em;
        margin-left: 2em;
        width:33px;
        cursor: pointer;
    }

    .logo_bar{
        width: 3em;
        margin: 1em auto;
    }
    
    /*Optimizing landscape mobile screens*/
    @media only screen and (max-height: 30em) {
        nav ul{top: 23%;}
        nav a{line-height: 2.2em}
    }
    
    /*"Moving" the logo by removing nav logo and now showing top bar logo*/
    .logo{
        display: none;
    }
    
    .nav_back_arrow{
        position: absolute;
        margin-top: 1.5em;
        margin-left: 1.5em;
        width: 30px;
        cursor: pointer;
        display: block;
    }
    
    .nav_shadow{
        display: none;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 100;
        background-color: rgba(0, 0, 0, 0.3);
        height: 100%;
        width: 100%;
}
}

/*For Javascript to toggle*/
.nav_active{
    transform: translateX(0%);
    box-shadow: 0 0 2em rgba(0, 0, 0, 0.1);
}
.nav_shadow_active{display: block;}

/*---------------------INTRO-----------------------*/


.intro h2{
    max-width: 27em;
}

.intro img{
    margin-top: 1em;
    width: 13em;
}

.intro{
    max-width: 68em;
    padding: 15vh 5em;
    margin: 0 auto; 
}

.intro_container{
    background-color: #F8F8F8;
    margin-bottom: 3em;
}

@media only screen and (max-width: 50em) {
    .intro{padding: 15vh 2.5em;}
    .intro img{width: 10em;}
    .intro_container{margin-bottom: 1em}
}



/*---------------------UX BANNERS-----------------------*/

.ux_banners{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(13, 7em);
    column-gap: 1.5em;
    max-width: 68em;
    margin: 0 auto 6em auto;
    padding: 0 .5em;
    filter: drop-shadow(0 1em 2em rgba(0, 0, 0, 0.2));
    -webkit-filter: drop-shadow(0 1em 2em rgba(0, 0, 0, 0.2));
}

.uxb_section_heading{
    grid-row: 1;
    grid-column: 1/-1;
    padding-left: 1.5em;
    padding-top: 3.5em;
    font-family: proxima-nova, sans-serif;
    font-weight: 500;
    font-size: 1.2em;
    text-transform: uppercase;
    color: #242424;
}

@media only screen and (max-width: 50em) {
    .uxb_section_heading{font-size: 1em;
    padding-top: 4.5em;}
}

.ux_banners h3, .ux_banners h1{
    color: #FFF;
}

.ux_banners button{
    color: #FFF;
    margin-top: 2em;
    border: #FFF solid 2px;
}

.ux_banners button:hover{
    color: #242424;
    background-color: #FFF;
}

.ux_banners img{
    object-fit: contain;
    max-height: 38em;
    -webkit-filter: drop-shadow(0 0 2em rgba(0, 0, 0, 0.1));
    filter: drop-shadow(0 0 2em rgba(0, 0, 0, 0.1));
    transition: ease .3s;
}

.ux_banners img:hover{
    transform: translateY(-1.5em);
}

.mobell_text{
    z-index: 2;
    grid-column: 1/4;
    grid-row: 3;
    padding-left: 8%;
    text-align: end;
}

.cp_events_text{
    z-index: 3;
    grid-column: 3/6;
    grid-row: 7;
    padding-right: 8%; 
    max-width: 60ch;
}

.mobell_app{
    grid-column: 4/6;
    grid-row: 1/7;
    z-index: 2;
    margin-right: 15%;
    align-self: center;
}

.cp_events_app{
    grid-column: 1/3;
    grid-row: 5/11;
    z-index: 3;
    margin-left: 15%;
    align-self: center;
}

.mobell_color{
    border-top-left-radius: 1em;
    border-top-right-radius: 1em;
    z-index: 1;
    grid-row: 2/6;
    grid-column: 1/6;
    width: 100%;
    height: 100%;
    background-color: rgba(238, 171, 0, 1.0);
}

.cp_events_color{
    z-index: 2;
    grid-row: 6/10;
    grid-column: 1/6;
    width: 100%;
    height: 100%;
    background-color: rgba(3, 86, 66, 1.0);
}

.more_ux{
    border-bottom-left-radius: 1em;
    border-bottom-right-radius: 1em;
    z-index: 3;
    grid-column: 1/-1;
    grid-row: 10/14;
    background-color: #F8F8F8;
    background-image: url(media/more_ux.png);
    background-position: 50% 100%;
    background-repeat: no-repeat;
    background-size: cover;
}

.more_ux_text{
    margin-top: 9em;
    margin-left: 10%;
    grid-column: 1/-1;
    grid-row: 15;
}

.more_ux_text h1{
    color: #242424;
}

.more_ux_text button{
    color: #242424;
    border: #242424 solid 2px;
    margin-top: 1em;
}


/*---------------------REFERENCE-----------------------*/

.reference{
    text-align: center;
    margin-bottom: 6em
}

.reference img{
    border-radius: 50%;
    width: 10em;
/*    box-shadow: 0 .2em .6em rgba(0, 0, 0, 0.2);*/
    
}

.reference h3{
    padding: 0 1em;
    margin: 0 auto;
    font-size: 2.2em;
    max-width: 20em;
    line-height: 1.3em;
    font-weight: 600;
    margin-bottom: .8em
}

.reference p{
    color: gray;
    margin: .3em auto .8em auto;
    font-size: 1.3em;
}

@media only screen and (max-width: 50em){
    .reference h3{font-size: 1.8em}
    .reference img{width: 8em;}
    .reference p{font-size: 1.1em}
}

    
/*----------------FOOTER-----------------*/

footer p{
    margin: 2em;
    font-size: 1em;
    color: #5555;
    text-align: center;
}

